--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -7,7 +7,7 @@
 </div>
 
 {% if not product_entries %}
-<div style="text-align: center;"></div>
+<div style="text-align: center;">
     <p style = "margin-bottom: 0;">Tidak menemukan produk apapun dalam {{ application }}.</p>
     <p style = "margin-top: 0;">/ᐠ - ˕ -マ Ⳋ</p>
 </div>
