--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -1,26 +1,43 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+{% load static %}
+{% block meta %}
+<title>Create Mood</title>
+{% endblock meta %}
+
 {% block content %}
+{% include 'navbar.html' %}
 
-<div style="text-align: center;">
-    <h2 style = "margin-bottom: 0;">Want to Add New Product?</h2>
-    <p style = "margin-top: 0;">please input your product information below ⋆˚ ༘ *</p>
-</div>
-
-<form method="POST">
-    {% csrf_token %}
-    <div class="table-container" style="margin: 0 auto; width: 200;">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td colspan="2" style="text-align: center; font-size: 0;">
-                    <a href="{% url 'main:show_main' %}">
-                        <button type="button" style="padding: 10px 20px; font-size: 16px; margin-right: 10px;">Back Home</button>
-                    </a>
-                    <button style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">Add Product</button>
-                </td>                
-            </tr>
-        </table>
+<div class="flex flex-col min-h-screen bg-gray-100 bg-cover bg-center" style='background-image: url("{% static "image/create_cover.png" %}");'>
+    <div class="container mx-auto px-4 py-8 mt-16 max-w-xl">
+    <h1 class="text-3xl font-bold text-center mb-8 text-[#333333]">Want to Add New Product?</h1>
+  
+    <div class="bg-white shadow-md rounded-lg p-6">
+      <form method="POST" class="space-y-6">
+        {% csrf_token %}
+        {% for field in form %}
+          <div class="flex flex-col">
+            <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-black">
+              {{ field.label }}
+            </label>
+            <div class="w-full">
+              <input id="{{ field.id_for_label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}" required class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="{{ field.label }}">
+            </div>
+            {% if field.help_text %}
+              <p class="mt-1 text-sm text-gray-500">{{ field.help_text }}</p>
+            {% endif %}
+            {% for error in field.errors %}
+              <p class="mt-1 text-sm text-red-600">{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endfor %}
+        <div class="flex justify-center mt-6">
+          <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#C96868] hover:bg-[#C96868] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#C96868]">
+            Create Product
+          </button>
+        </div>
+      </form>
     </div>
-</form>
+  </div>
+</div>
 
 {% endblock %}
