--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,44 +1,82 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block meta %}
 <title>Login</title>
 {% endblock meta %}
 
 {% block content %}
-<div class="login">
-    <div style="text-align: center;">
-        <h1 style = "margin-bottom: 0;">The Goods Place.</h1>
-    <p style = "margin-top: 0;"> where your wonderland of hugs awaits ⸜(｡˃ ᵕ ˂ )⸝♡</p>
+<div class="min-h-screen flex items-center justify-center w-screen bg-gray-100">
+  <div class="flex flex-wrap w-full h-screen">
+    <!-- Image Section -->
+    <div class="hidden md:flex md:w-1/2 h-full">
+      <img src="{% static 'image/login_cover.jpg' %}" alt="Login Image" class="w-full h-full object-cover">
     </div>
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <div class="table-container" style="margin: 0 auto; width: 200;">
-            <table>
-                {{ form.as_table }}
-                <tr>
-                    <td colspan="2" style="text-align: center;">
-                        <button class="btn login_btn" style="padding: 10px 20px; font-size: 16px;">Login</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </form>
+    <!-- Form Section -->
+    <div class="w-full md:w-1/2 flex items-center justify-center h-full bg-gray-100">
+      <div class="w-full max-w-md mx-auto flex items-center justify-center h-full bg-gray-100">
+        <div class="w-full space-y-8">
+          <h1 class="mt-6 text-center text-3xl font-extrabold text-[#333333]" style = "margin-bottom: 0;">
+            The Goods Place.
+          </h1>
+          <p class="text-center" style="margin-top: 0;">
+            where your wonderland of hugs awaits ⸜(｡˃ ᵕ ˂ )⸝♡
+          </p>  
 
-    {% if messages %}
-    <div style="text-align: center; margin-top: 20px;">
-        <ul style="list-style: none; padding: 0;">
+          <form class="mt-8 space-y-6" method="POST" action="">
+            {% csrf_token %}
+            <input type="hidden" name="remember" value="true">
+            <div class="rounded-md shadow-sm -space-y-px">
+              <div>
+                <label for="username" class="sr-only">Username</label>
+                <input id="username" name="username" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Username">
+              </div>
+              <div>
+                <label for="password" class="sr-only">Password</label>
+                <input id="password" name="password" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+              </div>
+            </div>
+
+            <div>
+              <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#C96868] hover:bg-[#C96868] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#C96868]">
+                Sign in
+              </button>
+            </div>
+          </form>
+
+          {% if messages %}
+          <div class="mt-4">
             {% for message in messages %}
-            <li>{{ message }}</li>
+            {% if message.tags == "success" %}
+              <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+              </div>
+            {% elif message.tags == "error" %}
+              <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+              </div>
+            {% else %}
+              <div class="bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+              </div>
+            {% endif %}
             {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
-    
-    <div style="text-align: center; margin-top: 20px; font-size: 16px;">
-        Want to join our adventure?
-        <a href="{% url 'main:register' %}">start here!</a>
-    </div>
-</div>
+          </div>
+          {% endif %}
 
+          <div class="text-center mt-4">
+            <p class="text-sm text-black">
+              Want to join our adventure?
+              <a href="{% url 'main:register' %}" class="font-medium text-[#C96868] hover:text-[#C96868]">
+                start here!
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
