--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,41 +1,85 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block meta %}
 <title>Register</title>
 {% endblock meta %}
 
 {% block content %}
-
-<div class="login">
-    <div style="text-align: center;">
-        <h1 style = "margin-bottom: 0;">Create New Account</h1>
-        <p style = "margin-top: 0;">unlock the wonders and begin your journey now ᯓᡣ𐭩</p>
-    </div>
-
-    <form method="POST">
-        {% csrf_token %}
-        <div class="table-container" style="margin: 0 auto; width: 200;">
-            <table>
-                {{ form.as_table }}
-                <tr>
-                    <td colspan="2" style="text-align: center; font-size: 0;">
-                        <a href="{% url 'main:logout' %}">
-                            <button type="button" style="padding: 10px 20px; font-size: 16px; margin-right: 10px;">Back Home</button>
-                        </a>
-                        <button class="btn login_btn" style="padding: 10px 20px; font-size: 16px;">Register Here</button>
-                    </td>
-                </tr>
-            </table>
+<div class="min-h-screen flex items-center justify-center w-screen bg-gray-100">
+  <div class="flex flex-wrap w-full h-screen">
+    <!-- Form Section -->
+    <div class="w-full md:w-1/2 flex items-center justify-center h-full bg-gray-100">
+        <div class="w-full max-w-md mx-auto flex items-center justify-center h-full bg-gray-100">
+          <div class="w-full space-y-8">
+            <h1 class="mt-6 text-center text-3xl font-extrabold text-[#333333]" style="margin-bottom: 0;">
+                Create New Account
+            </h1>
+            <p class="text-center" style="margin-top: 0;">
+                unlock the wonders and begin your journey now ᯓᡣ𐭩
+            </p>              
+      
+            <form class="mt-8 space-y-6" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="remember" value="true">
+                <div class="rounded-md shadow-sm -space-y-px">
+                  {% for field in form %}
+                    <div class="{% if not forloop.first %}mt-4{% endif %}">
+                      <label for="{{ field.id_for_label }}" class="sr-only">{{ field.label }}</label>
+                      <input id="{{ field.id_for_label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}" required class="appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 {% if forloop.first %}rounded-t-md{% elif forloop.last %}rounded-b-md{% else %}rounded-none{% endif %} focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="{{ field.label }}">
+                      {% if field.errors %}
+                        {% for error in field.errors %}
+                          <p class="mt-1 text-sm text-red-600">{{ error }}</p>
+                        {% endfor %}
+                      {% endif %}
+                    </div>
+                  {% endfor %}
+                </div>
+              
+                <div>
+                  <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#C96868] hover:bg-[#C96868] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#C96868]">
+                    Register
+                  </button>
+                </div>
+            </form>              
+      
+            {% if messages %}
+            <div class="mt-4">
+                {% for message in messages %}
+                {% if message.tags == "success" %}
+                    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+                    <span class="block sm:inline">{{ message }}</span>
+                    </div>
+                {% elif message.tags == "error" %}
+                    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                    <span class="block sm:inline">{{ message }}</span>
+                    </div>
+                {% else %}
+                    <div class="bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded relative" role="alert">
+                    <span class="block sm:inline">{{ message }}</span>
+                    </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+            {% endif %}
+      
+            <div class="text-center mt-4">
+              <p class="text-sm text-black">
+                Already on board?
+                <a href="{% url 'main:login' %}" class="font-medium text-[#C96868] hover:text-[#C96868]">
+                  continue here!
+                </a>
+              </p>
+            </div>
           </div>
-    </form>
+        </div>
+    </div>      
 
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    <!-- Image Section -->
+    <div class="hidden md:flex md:w-1/2 h-full">
+      <img src="{% static 'image/register_cover.jpg' %}" alt="Register Image" class="w-full h-full object-cover">
+    </div>
+  </div>
 </div>
-
 {% endblock content %}
